--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
 		"@fontsource/roboto": "^5.0.13",
 		"@mui/icons-material": "^5.15.19",
 		"@mui/material": "^5.15.19",
+		"@types/react-router-dom": "^5.3.3",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.23.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
