--- a/server/.gitignore
+++ b/server/.gitignore
@@ -14,6 +14,9 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
+**/.vscode/
+.vscode/symbols.json
+symbols.json
 !.vscode/extensions.json
 .idea
 .DS_Store
