--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "uuid": "^9.0.1",
-    "ws": "^8.17.0"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"main": "dist/index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js",
+		"dev": "nodemon index.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"express": "^4.19.2",
+		"uuid": "^9.0.1",
+		"ws": "^8.17.0"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.14.1",
+		"@types/uuid": "^9.0.8",
+		"@types/ws": "^8.5.10",
+		"nodemon": "^3.1.3",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.5"
+	}
 }
