--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"cors": "^2.8.5",
+		"date-and-time": "^3.3.0",
 		"express": "^4.19.2",
-		"uuid": "^9.0.1",
-		"ws": "^8.17.0"
+		"socket.io": "^4.7.5",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
