--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
 		"react-router-dom": "^6.23.1",
-		"socket.io-client": "^4.7.5"
+		"socket.io-client": "^4.7.5",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
