--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
 		"@mui/icons-material": "^5.15.19",
 		"@mui/material": "^5.15.19",
 		"@types/react-router-dom": "^5.3.3",
+		"axios": "^1.7.2",
 		"date-and-time": "^3.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
