--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,16 @@
 	"description": "",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"date-and-time": "^3.3.0",
 		"express": "^4.19.2",
+		"http-status-codes": "^2.3.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.4.1",
 		"socket.io": "^4.7.5",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
