--- a/server/package.json
+++ b/server/package.json
@@ -9,17 +9,19 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js",
-		"dev": "nodemon index.ts"
+		"dev": "nodemon --delay 500ms index.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"@types/jsonwebtoken": "^9.0.6",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"date-and-time": "^3.3.0",
+		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"http-status-codes": "^2.3.0",
 		"jsonwebtoken": "^9.0.2",
