--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.14.1",
 		"@types/uuid": "^9.0.8",
