--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,15 @@
 		"@hookform/resolvers": "^3.6.0",
 		"@mui/icons-material": "^5.15.19",
 		"@mui/material": "^5.15.19",
+		"@reduxjs/toolkit": "^2.2.5",
+		"@types/react-redux": "^7.1.33",
 		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.7.2",
 		"date-and-time": "^3.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
 		"socket.io-client": "^4.7.5",
 		"zod": "^3.23.8"
