--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
 		"react-hook-form": "^7.51.5",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.23.1",
+		"react-toastify": "^10.0.5",
 		"socket.io-client": "^4.7.5",
 		"zod": "^3.23.8"
 	},
