--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js",
-		"dev": "nodemon --delay 500ms index.ts"
+		"dev": "nodemon --delay 500ms index.ts",
+		"text": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -36,6 +37,7 @@
 		"@types/node": "^20.14.1",
 		"@types/uuid": "^9.0.8",
 		"@types/ws": "^8.5.10",
+		"jest": "^29.7.0",
 		"nodemon": "^3.1.3",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
