--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
 	"name": "server",
 	"engines": {
 		"npm": "10.8.1",
-		"node": "20.10.0"
+		"node": ">=20.10.0"
 	},
 	"version": "1.0.0",
 	"main": "dist/index.js",
