--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"@socket.io/admin-ui": "^0.5.1",
 		"@types/jsonwebtoken": "^9.0.6",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
