--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,9 @@
 	"version": "1.0.0",
 	"main": "dist/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js",
 		"dev": "nodemon --delay 500ms index.ts",
-		"text": "jest"
+		"test": "cross-env NODE_ENV=test jest --testTimeout=5000"
 	},
 	"keywords": [],
 	"author": "",
@@ -33,13 +32,19 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@shelf/jest-mongodb": "^4.3.2",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.14.6",
+		"@types/supertest": "^6.0.2",
 		"@types/uuid": "^9.0.8",
 		"@types/ws": "^8.5.10",
+		"cross-env": "^7.0.3",
 		"jest": "^29.7.0",
 		"nodemon": "^3.1.3",
+		"supertest": "^7.0.0",
+		"ts-jest": "^29.2.2",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
 	}
