--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"start": "node index.js",
 		"dev": "nodemon --delay 500ms index.ts",
-		"test": "cross-env NODE_ENV=test jest --testTimeout=5000"
+		"test": "cross-env NODE_ENV=test jest --testTimeout=5000 --coverage"
 	},
 	"keywords": [],
 	"author": "",
@@ -32,7 +32,6 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@shelf/jest-mongodb": "^4.3.2",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
@@ -42,6 +41,7 @@
 		"@types/ws": "^8.5.10",
 		"cross-env": "^7.0.3",
 		"jest": "^29.7.0",
+		"mongodb-memory-server": "^9.4.0",
 		"nodemon": "^3.1.3",
 		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.2",
