--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"start": "node index.js",
 		"dev": "nodemon --delay 500ms index.ts",
-		"test": "cross-env NODE_ENV=test jest --testTimeout=5000 --coverage --runInBand"
+		"test": "cross-env NODE_ENV=test jest --testTimeout=5000 --coverage --runInBand --watchAll --no-cache --detectOpenHandles"
 	},
 	"keywords": [],
 	"author": "",
