--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"start": "node index.js",
-		"dev": "nodemon --delay 500ms index.ts",
+		"dev": "nodemon --delay 500ms api/index.ts",
 		"test": "cross-env NODE_ENV=test jest --testTimeout=5000 --coverage --runInBand --watchAll --no-cache --detectOpenHandles"
 	},
 	"keywords": [],
