--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,9 +1,13 @@
 {
 	"compilerOptions": {
-		"target": "ES2020",
+		"esModuleInterop": true,
+		"target": "es2022",
+		"allowJs": true,
+		"moduleDetection": "force",
+		"verbatimModuleSyntax": true,
 		"useDefineForClassFields": true,
-		"lib": ["ES2020", "DOM", "DOM.Iterable"],
-		"module": "ESNext",
+		"lib": ["es2022", "DOM", "DOM.Iterable"],
+		"module": "preserve",
 		"skipLibCheck": true,
 
 		/* Bundler mode */
@@ -18,7 +22,9 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
+		"noUncheckedIndexedAccess": true,
+		"noImplicitOverride": true
 	},
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
