--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,7 +24,10 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedIndexedAccess": true,
-		"noImplicitOverride": true
+		"noImplicitOverride": true,
+
+		/* Testing */
+		"types": ["vitest/globals", "@testing-library/jest-dom"]
 	},
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
