--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.4.8",
 		"@testing-library/react": "^16.0.0",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/node": "^20.14.8",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
@@ -51,6 +52,6 @@
 		"jsdom": "^24.1.1",
 		"typescript": "^5.2.2",
 		"vite": "^5.2.0",
-		"vitest": "^1.6.0"
+		"vitest": "^2.0.5"
 	}
 }
