--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@flydotio/dockerfile": "^0.5.8",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.12",
